--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="my-component">
-    <div id="app-header"></div>
-    <h1>App component</h1>
-    <div id="app-footer"></div>
+    <header id="app-header"></header>
+    <main id="app-main"></main>
+    <footer id="app-footer"></footer>
 </div>
