--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,16 +1,16 @@
 <div class="header-section">
-    <nav class="px-3 py-3 bg-body-secondary">
+    <nav class="px-3 py-2 bg-body-secondary">
         <ul
-            class="row row-cols-auto align-items-center gx-md-4 gx-xl-5 gy-3 container-1 mx-auto justify-content-between text-primary-emphasis">
+            class="row row-cols-auto align-items-center gx-3 gx-sm-3 gx-md-4 gx-xl-5 gy-3 container-1 mx-auto justify-content-between text-primary-emphasis">
             <li>
-                <button class="border-0 bg-transparent menu-item" data-route="home">Home</button>
+                <button class="border-0 bg-transparent menu-item" data-route="">Home</button>
             </li>
             <li>
-                <button class="border-0 bg-transparent menu-item" data-route="create-card">Card list</button>
+                <button class="border-0 bg-transparent menu-item" data-route="card-list">Card list</button>
             </li>
             <li class="flex-grow-1">
-                <button class="border-0 bg-primary px-3 py-2 rounded-pill ms-auto d-block text-white menu-item"
-                    data-route="card-detail">
+                <button class="border-0 bg-primary px-2 px-md-3 py-1 py-md-2 rounded-pill ms-auto d-block text-white menu-item"
+                    data-route="create-card">
                     Create card
                 </button>
             </li>
