--- a/src/app/components/create-card/create-card.component.html
+++ b/src/app/components/create-card/create-card.component.html
@@ -1,4 +1,17 @@
-<form>
-    <input type="text">
-    <button type="submit" id="submit-btn">Submit</button>
+<form id="card-form">
+    <div id="title-wrap">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title">
+        <div class="text-danger mt-2 error-message">Title is required.</div>
+    </div>
+    <div id="description-wrap">
+        <label for="description">Description:</label>
+        <textarea id="description" name="description"></textarea>
+        <div class="text-danger mt-2 error-message">Description is required.</div>
+    </div>
+    <div>
+        <label for="imageLink">Image Link:</label>
+        <input type="text" id="imageLink" name="imageLink">
+    </div>
+    <button type="button" id="submit-btn">Submit</button>
 </form>
