--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
-<div class="header-section">
-    <nav class="px-3 py-2 bg-body-secondary">
+<div class="bg-body-secondary header-section">
+    <nav class="px-3 py-2 container-1 mx-auto mw-100">
         <ul
-            class="row row-cols-auto align-items-center gx-3 gx-sm-3 gx-md-4 gx-xl-5 gy-3 container-1 mx-auto justify-content-between text-primary-emphasis">
+            class="row row-cols-auto align-items-center gx-3 gx-sm-3 gx-md-4 gx-xl-5 gy-3 justify-content-between text-primary-emphasis">
             <li>
                 <button class="border-0 bg-transparent menu-item" data-route="">Home</button>
             </li>
@@ -9,7 +9,8 @@
                 <button class="border-0 bg-transparent menu-item" data-route="card-list">Card list</button>
             </li>
             <li class="flex-grow-1">
-                <button class="border-0 bg-primary px-2 px-md-3 py-1 py-md-2 rounded-pill ms-auto d-block text-white menu-item"
+                <button
+                    class="border-0 bg-primary px-2 px-md-3 py-1 py-md-2 rounded-pill ms-auto d-block text-white menu-item"
                     data-route="create-card">
                     Create card
                 </button>
