--- a/src/app/components/create-card/create-card.component.html
+++ b/src/app/components/create-card/create-card.component.html
@@ -1,17 +1,42 @@
-<form id="card-form">
-    <div id="title-wrap">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title">
-        <div class="text-danger mt-2 error-message">Title is required.</div>
-    </div>
-    <div id="description-wrap">
-        <label for="description">Description:</label>
-        <textarea id="description" name="description"></textarea>
-        <div class="text-danger mt-2 error-message">Description is required.</div>
-    </div>
-    <div>
-        <label for="imageLink">Image Link:</label>
-        <input type="text" id="imageLink" name="imageLink">
-    </div>
-    <button type="button" id="submit-btn">Submit</button>
-</form>
+<div class="py-5 bg-body-tertiary px-3">
+    <form id="card-form" class="container-2 mx-auto mw-100">
+        <div id="title-wrap">
+            <label for="title">
+                Title
+                <span class="text-danger">*</span>
+            </label>
+            <input type="text" id="title" class="mt-2 w-100 px-3 py-2 bg-white" name="title">
+            <div class="text-danger mt-2 error-message">
+                Title is required.
+            </div>
+        </div>
+        <div id="description-wrap" class="mt-4">
+            <label for="description">
+                Description
+                <span class="text-danger">*</span>
+            </label>
+            <textarea id="description" class="mt-2 w-100 px-3 py-2 bg-white" name="description"></textarea>
+            <div class="text-danger mt-2 error-message">
+                Description is required.
+            </div>
+        </div>
+        <div class="mt-4" id="image-link-wrap">
+            <label for="image-link">
+                Image Link (not mandatory)
+            </label>
+            <input type="text" id="image-link" class="mt-2 w-100 px-3 py-2 bg-white" name="imageLink">
+            <div class="text-danger mt-2 error-message">
+                It seems the link you've provided isn't pointing to a valid image. Please ensure that the URL starts
+                with http:// or https:// and ends with a recognized image format like .jpg, .jpeg, .png, .gif, .bmp,
+                .webp, .svg, or .tiff.
+            </div>
+        </div>
+        <div id="submit-btn-wrap" class="mt-5 position-relative mx-auto width-fit-content">
+            <button type="button" id="submit-btn" class="bg-primary text-white p-4 py-3 rounded-2 d-block">
+                Submit
+            </button>
+            <img src="../../../assets/images/spinner-primary.svg" alt="spinner" id="submit-btn-spinner"
+                class="position-absolute top-50 start-50 translate-middle d-none">
+        </div>
+    </form>
+</div>
