--- a/src/app/components/create-card/create-card.component.scss
+++ b/src/app/components/create-card/create-card.component.scss
@@ -1,16 +1,42 @@
+input,
+textarea {
+    font-size: 1.2rem;
+    line-height: normal;
+}
+
 .error-message {
     display: none;
     font-size: 1rem;
 }
 
-.error {
+.form-submitted {
+    .error {
 
-    input,
-    textarea {
-        border-color: #dc3545;
-    }
+        input,
+        textarea {
+            border-color: #dc3545;
+        }
 
-    .error-message {
-        display: block;
+        .error-message {
+            display: block;
+        }
     }
+}
+
+label {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+#description-wrap {
+    line-height: 0;
+
+    #description {
+        height: 16ex;
+    }
+}
+
+#submit-btn {
+    font-size: 1.2rem;
+    font-weight: 600;
 }
