--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="my-component">
-    <header id="app-header"></header>
-    <main id="app-main"></main>
-    <footer id="app-footer"></footer>
+<div class="position-relative min-vh-100 all-components d-flex flex-column">
+    <header id="app-header" class="position-sticky top-0"></header>
+    <main id="app-main" class="flex-grow-1 d-flex flex-column"></main>
+    <footer id="app-footer" class=""></footer>
 </div>
