--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="bg-body-tertiary flex-grow-1">
     <div id="app-home"></div>
     <div id="app-card-list"></div>
     <div id="app-create-card"></div>
