--- a/src/app/components/card-list/card-list.component.html
+++ b/src/app/components/card-list/card-list.component.html
@@ -1,1 +1,4 @@
-card-list
+<img src="../../../assets/images/image-placeholder.svg" alt="placeholder-image" id="placeholder-image" class="d-none">
+<div class="px-3 px-md-4 px-xl-5 py-2 container-1 mx-auto mw-100">
+    <ul id="card-list" class="row row-cols-1 row-cols-sm-2 row-cols-3 row-cols-lg-4 row-cols-xl-5 row-cols-xxl-6"></ul>
+</div>
