--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
-<div class="bg-body-secondary header-section">
-    <nav class="px-3 py-2 container-1 mx-auto mw-100">
+<div class="bg-body-secondary shadow header-section">
+    <nav class="px-3 px-md-4 px-xl-5 py-2 container-1 mx-auto mw-100">
         <ul
-            class="row row-cols-auto align-items-center gx-3 gx-sm-3 gx-md-4 gx-xl-5 gy-3 justify-content-between text-primary-emphasis">
+            class="row row-cols-auto align-items-center gx-3 gx-md-4 gx-xl-5 gy-3 justify-content-between text-primary-emphasis">
             <li>
                 <button class="border-0 bg-transparent menu-item" data-route="">Home</button>
             </li>
