--- a/src/app/components/card-detail/card-detail.component.html
+++ b/src/app/components/card-detail/card-detail.component.html
@@ -1,1 +1,7 @@
-card details
+<section class="card-detail-section">
+    <div class="px-3 px-md-4 px-xl-5 py-4 py-lg-5 container-1 mx-auto mw-100 text-center">
+        <img src="../../../assets/images/image-placeholder.svg" alt="banner image" id="image" class="mw-100">
+        <h1 id="title" class="mt-4 text-black"></h1>
+        <p id="description" class="mt-4 text-dark"></p>
+    </div>
+</section>
