--- a/src/app/components/create-card/create-card.component.html
+++ b/src/app/components/create-card/create-card.component.html
@@ -1,4 +1,4 @@
-<div class="py-5 px-3 px-md-4 px-xl-5">
+<div class="py-5 px-3 px-md-4 px-xl-5 create-card-section">
     <form id="card-form" class="container-2 mx-auto mw-100">
         <div id="title-wrap">
             <label for="title">
