--- a/src/app/components/create-card/create-card.component.scss
+++ b/src/app/components/create-card/create-card.component.scss
@@ -1,44 +1,47 @@
-input,
-textarea {
-    font-size: 1.2rem;
-    line-height: normal;
-}
+.create-card-section {
 
-.error-message {
-    display: none;
-    font-size: 1rem;
-}
-
-.form-submitted {
-    .error {
-
-        input,
-        textarea {
-            border-color: #dc3545;
-        }
-
-        .error-message {
-            display: block;
-        }
-    }
-}
-
-label {
-    font-size: 1rem;
-    font-weight: 600;
-}
-
-#description-wrap {
-    line-height: 0;
-
-    #description {
-        height: 16ex;
-    }
-}
-
-#submit-btn-wrap {
-    #submit-btn {
+    input,
+    textarea {
         font-size: 1.2rem;
+        line-height: normal;
+    }
+
+    .error-message {
+        display: none;
+        font-size: 1rem;
+    }
+
+    .form-submitted {
+        .error {
+
+            input,
+            textarea {
+                border-color: #dc3545;
+            }
+
+            .error-message {
+                display: block;
+            }
+        }
+    }
+
+    label {
+        font-size: 1rem;
         font-weight: 600;
+    }
+
+    #description-wrap {
+        line-height: 0;
+
+        #description {
+            height: 16ex;
+        }
+    }
+
+    #submit-btn-wrap {
+        #submit-btn {
+            font-size: 1.2rem;
+            font-weight: 600;
+        }
     }
 }
