--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,14 +3,14 @@
         <ul
             class="row row-cols-auto align-items-center gx-3 gx-md-4 gx-xl-5 gy-3 justify-content-between text-primary-emphasis">
             <li>
-                <button class="border-0 bg-transparent menu-item" data-route="">Home</button>
+                <button class="border-0 bg-transparent router-element" data-route="">Home</button>
             </li>
             <li>
-                <button class="border-0 bg-transparent menu-item" data-route="card-list">Card list</button>
+                <button class="border-0 bg-transparent router-element" data-route="card-list">Card list</button>
             </li>
             <li class="flex-grow-1">
                 <button
-                    class="border-0 bg-primary px-2 px-md-3 py-1 py-md-2 rounded-pill ms-auto d-block text-white menu-item"
+                    class="border-0 bg-primary px-2 px-md-3 py-1 py-md-2 rounded-pill ms-auto d-block text-white router-element"
                     data-route="create-card">
                     Create card
                 </button>
