--- a/src/app/components/card-list/card-list.component.html
+++ b/src/app/components/card-list/card-list.component.html
@@ -2,10 +2,14 @@
     <div id="loader">
         <img src="../../../assets/images/spinner-primary.svg" alt="loader" class="d-block mx-auto">
     </div>
-    <img src="../../../assets/images/image-placeholder.svg" alt="placeholder-image" id="placeholder-image"
-        class="d-none">
+    <div class="d-none">
+        <img src="../../../assets/images/image-placeholder.svg" alt="placeholder-image" id="placeholder-image">
+        <img src="../../../assets/images/edit.svg" alt="edit" id="edit">
+        <img src="../../../assets/images/delete.svg" alt="delete" id="delete">
+    </div>
     <div>
-        <ul id="card-list" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-xxl-6">
+        <ul id="card-list"
+            class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-xxl-6 pb-5">
         </ul>
     </div>
 </div>
