--- a/src/app/components/card-list/card-list.component.html
+++ b/src/app/components/card-list/card-list.component.html
@@ -1,5 +1,5 @@
 <div class="px-3 px-md-4 px-xl-5 py-2 container-1 mx-auto mw-100 card-list-section">
-    <div id="loader">
+    <div class="main-loader">
         <img src="../../../assets/images/spinner-primary.svg" alt="loader" class="d-block mx-auto">
     </div>
     <div class="d-none">
@@ -7,7 +7,7 @@
         <img src="../../../assets/images/edit.svg" alt="edit" id="edit">
         <img src="../../../assets/images/delete.svg" alt="delete" id="delete">
     </div>
-    <div>
+    <div id="card-list-wrap">
         <ul id="card-list"
             class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-xxl-6 pb-5">
         </ul>
