--- a/src/app/components/card-detail/card-detail.component.scss
+++ b/src/app/components/card-detail/card-detail.component.scss
@@ -7,8 +7,30 @@
         font-size: 2rem;
         font-weight: 600;
     }
-    #description{
+
+    #description {
         font-size: 1.2rem;
         font-weight: 400;
+    }
+
+    #buttons {
+        button {
+            img {
+                height: 1.3rem;
+            }
+
+            span {
+                font-size: 1rem;
+                font-weight: 600;
+            }
+        }
+
+        .edit {
+            background-color: rgb(13, 110, 253, .3);
+        }
+
+        .delete {
+            background-color: rgb(220, 53, 69, .3);
+        }
     }
 }
