--- a/src/app/components/card-detail/card-detail.component.scss
+++ b/src/app/components/card-detail/card-detail.component.scss
@@ -25,11 +25,11 @@
             }
         }
 
-        .edit {
+        #edit {
             background-color: rgb(13, 110, 253, .3);
         }
 
-        .delete {
+        #delete {
             background-color: rgb(220, 53, 69, .3);
         }
     }
