--- a/src/app/components/card-list/card-list.component.html
+++ b/src/app/components/card-list/card-list.component.html
@@ -11,5 +11,13 @@
         <ul id="card-list"
             class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-xxl-6 pb-5">
         </ul>
+        <div id="no-card" class="d-none">
+            <span class="d-block text-center">
+                Oops! No Cards Here 😕🙅‍♂️
+            </span>
+            <button class="text-white px-3 py-2 d-block mx-auto rounded-2 mt-3">
+                Create a card
+            </button>
+        </div>
     </div>
 </div>
