--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,7 @@
-Footer
+<div class="footer-section">
+    <div class="px-3 px-md-4 px-xl-5 py-3 py-lg-4 container-1 mx-auto mw-100 text-center">
+        Developed by
+        <a href="https://www.linkedin.com/in/khan-arnab?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+            target="_blank">Arnab Khan</a>.
+    </div>    
+</div>
