--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,7 @@
-home
+<div class="home-section">
+    <p class="px-3 px-md-4 px-xl-5 py-4 py-lg-5 container-1 mx-auto mw-100 content">
+        I have created a single-page application without using traditional frameworks or librarys like Angular, React,
+        or Vue.js. The application is built with HTML, SCSS, and TypeScript and compile in a Node.js environment, with
+        Webpack used for compiling the project files. In this application, users can create, edit, and delete cards.
+    </p>
+</div>
