--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,11 @@
 <div class="bg-body-tertiary flex-grow-1">
+
+    <!-- start component wrapper element -->
     <div id="app-home"></div>
     <div id="app-card-list"></div>
     <div id="app-create-card"></div>
     <div id="app-card-detail"></div>
+    <div id="app-page-not-found"></div>
+    <!-- end component wrapper element -->
+
 </div>
