--- a/src/app/components/card-detail/card-detail.component.html
+++ b/src/app/components/card-detail/card-detail.component.html
@@ -7,12 +7,12 @@
         <h1 id="title" class="mt-4 text-black"></h1>
         <p id="description" class="mt-4 text-dark"></p>
         <div id="buttons" class="d-flex justify-content-center mt-5">
-            <button type="button" class="rounded-pill overflow-hidden px-2 px-lg-3 py-1 py-lg-2" id="edit">
+            <button type="button" class="rounded-pill overflow-hidden px-3 py-2" id="edit">
                 <img src="../../../assets/images/edit.svg" alt="edit">
                 <span class="ps-1 ps-lg-2 text-primary">Edit</span>
             </button>
-            <div class="position-relative width-fit-contentms-3 ms-lg-4 rounded-pill overflow-hidden" id="delete">
-                <button type="button" class="px-2 px-lg-3 py-1 py-lg-2">
+            <div class="position-relative width-fit-contentms-3 ms-3 ms-lg-4 rounded-pill overflow-hidden" id="delete">
+                <button type="button" class="px-3 py-2">
                     <img src="../../../assets/images/delete.svg" alt="delete">
                     <span class="ps-1 ps-lg-2 text-danger">Delete</span>
                 </button>
