--- a/src/app/components/create-card/create-card.component.scss
+++ b/src/app/components/create-card/create-card.component.scss
@@ -42,6 +42,11 @@
         #submit-btn {
             font-size: 1.2rem;
             font-weight: 600;
+            background-color: #007bff;
+
+            &:hover {
+                background-color: #28a745;
+            }
         }
     }
 }
